try to fix non visible gravatar -> picture in bio$

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -69,7 +69,7 @@
 }
 
 .fun {
-    height: 30px;
+    width: 100%;
     background-color: black;
 }
 
